Categorical Encoding And Textual Data Processing

--- a/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -2028,11 +2028,55 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "EGAmHKSlgzS7"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## ***6. Feature Engineering & Data Pre-processing***"
       ],
       "metadata": {
         "id": "yLjJCtPM0KBk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1.Handling Missing Values"
+      ],
+      "metadata": {
+        "id": "mqda93rBkaRP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Handling missing values imputation\n",
+        "\n",
+        "# checking if there is any missing value in data set.\n",
+        "\n",
+        "data_2.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "GI0MXFjkkizh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   **No missing values in data set.**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oXpoGgQNlUEr"
       }
     },
     {
@@ -2119,10 +2163,66 @@
     {
       "cell_type": "code",
       "source": [
-        "# Encode your categorical columns\n"
+        "# Encode your categorical columns\n",
+        "\n",
+        "# Converting snowfall and rainfall to categorical attributes\n",
+        "data_2['snowfall'] = data_2['snowfall'].apply(lambda x: 1 if x>0 else 0)\n",
+        "data_2['rainfall'] = data_2['rainfall'].apply(lambda x: 1 if x>0 else 0)\n",
+        "\n"
       ],
       "metadata": {
         "id": "21JmIYMG2hEo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# encoding the visibility column\n",
+        "data_2['visibility'] = data_2['visibility'].apply(lambda x: 0 if 0<=x<=399 else (1 if 400<=x<=999 else 2))\n",
+        ""
+      ],
+      "metadata": {
+        "id": "Hv4JSz6TX_Pm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# encoding\n",
+        "data_2['func_day'] = np.where(data_2['func_day'] == 'Yes',1,0)\n",
+        "data_2['holiday'] = np.where(data_2['holiday'] == 'Holiday', 1,0)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "os2XoQiZYId0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# one hot encoding\n",
+        "data_2 = pd.get_dummies(data_2, columns = ['hour', 'visibility', 'month', 'day_of_week' ])\n",
+        ""
+      ],
+      "metadata": {
+        "id": "Nw1sJ2jIYQhG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_2.columns"
+      ],
+      "metadata": {
+        "id": "leGlhKekYcNP"
       },
       "execution_count": null,
       "outputs": []
@@ -2139,7 +2239,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**bold text**\n",
+        "\n",
+        "*   **Since there are very few day on which there was snowfall / rainfall, it is in our interest that we convert these columns to binary categorical columns indicating whether there was rainfall / snowfall at that particular hour.**\n",
+        "\n",
+        " **For visibility**\n",
+        "\n",
+        " **When**\n",
+        "\n",
+        " **Visibility >= 20 Km ---> Clear (high visibility)**\n",
+        "\n",
+        " **4 Km <= Visibility < 10 Km ---> Haze (medium visibility)**\n",
+        "\n",
+        "  **Visibility < 4 Km ---> Fog (low visibility)**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   **Converting visibility based on the above mentioned threshold values. Since they are ordinal, we can encode them as 0 (low visibility), 1 (medium visibility), 2 (high visibility)**\n",
+        "*   **For func day and holiday There are two categories whether its holiday or func day so we use 0 and 1 for that.**\n",
+        "*   **For Hour, Visisbility, month & day of the week we use here one hot encoding.**\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "UDaue5h32n_G"
@@ -2153,6 +2274,32 @@
       ],
       "metadata": {
         "id": "Iwf50b-R2tYG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_2.head()"
+      ],
+      "metadata": {
+        "id": "ehZOh8fJoDTw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Note:-**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   **As we can see that there is no such textual data in our data setso no need of textual data processing.**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Qs71naO0oX7F"
       }
     },
     {
