--- a/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Sameera's_Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -3505,11 +3505,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ML Model - 2"
+        "### ML Model - 2 Lasso Regression"
       ],
       "metadata": {
         "id": "dJ2tPlVmpsJ0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import the Lasso Regression class\n",
+        "lasso = Lasso()\n",
+        "\n",
+        "# Initialize an instance of the class\n",
+        "lasso.fit(X_train, y_train)\n",
+        "\n",
+        "# Fit the lasso regression model to your training data\n",
+        "y_pred_lasso1 = lasso.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "STrE9HU3HAj4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3523,13 +3541,39 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing evaluation Metric Score chart"
+        "# Visualizing evaluation Metric Score chart\n",
+        "lasso_score = evaluate_model(lasso, y_test,y_pred_lasso1)\n",
+        "score['Lasso regression'] = lasso_score"
       ],
       "metadata": {
         "id": "yEl-hgQWpsJ1"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score"
+      ],
+      "metadata": {
+        "id": "PWWDnlqEHVrB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   **It is seen that using Lasso regression analysis the performance of the model has drop down. so we will try to tuned the model.**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KKyYMxjYHhAO"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3544,13 +3588,79 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 1 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
+        "lasso = Lasso()\n",
         "\n",
-        "# Fit the Algorithm\n",
+        "parameters = {'alpha': [1e-15,1e-10,1e-8,1e-5,1e-4,1e-3,1e-2,1,5,10,20,30,40,45,50,55,60,100]}\n",
         "\n",
-        "# Predict on the model"
+        "lasso_regressor = GridSearchCV(lasso, parameters, scoring='neg_mean_squared_error', cv=5)\n",
+        "\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "Dn0EOfS6psJ2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fit the Algorithm\n",
+        "lasso_regressor.fit(X_train,y_train)\n"
+      ],
+      "metadata": {
+        "id": "m1XZs6dtJBgK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#getting optimum parameters\n",
+        "\n",
+        "print(\"The optimum alpha value is found out to be :\" ,lasso_regressor.best_params_)\n",
+        "print(\"\\nUsing \",lasso_regressor.best_params_, \" the negative mean squared error is: \", lasso_regressor.best_score_)\n"
+      ],
+      "metadata": {
+        "id": "S7CGcmEHIywe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predict on the model\n",
+        "# Import the Lasso Regression class with best alpha\n",
+        "lasso = Lasso(alpha = lasso_regressor.best_params_['alpha'])\n",
+        "\n",
+        "# Initialize an instance of the class\n",
+        "lasso.fit(X_train, y_train)\n",
+        "\n",
+        "# Fit the lasso regression model to your training data\n",
+        "y_pred_lassocv = lasso.predict(X_test)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "kUg_ipi2Inmu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Evaluation matrices for Lasso regression\n",
+        "lasso2 = evaluate_model(lasso, y_test,y_pred_lassocv)\n",
+        "\n",
+        "name = 'Lasso with alpha = ' + str(lasso_regressor.best_params_['alpha'])\n",
+        "\n",
+        "score[name] = lasso2"
+      ],
+      "metadata": {
+        "id": "Kzi7hHasJpY4"
       },
       "execution_count": null,
       "outputs": []
@@ -3567,7 +3677,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **GridSearchCV is used to find the best hyperparameters for a machine learning model by searching over a specified parameter grid. It helps to ensure that a model is not overfitting or underfitting by evaluating the model's performance using cross-validation techniques. GridSearchCV can save time and resources compared to manually tuning the parameters of a model.**\n",
+        "\n",
+        " **To reduce time and effort we have used GridSearchCV.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "9kBgjYcdpsJ2"
@@ -3583,9 +3699,24 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "score"
+      ],
+      "metadata": {
+        "id": "w5HOeKpaKGW2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **After tuning we have seen that there is increse in performance from 52% to 78%.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "74yRdG6UpsJ3"
@@ -3603,7 +3734,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **RMSE & MSE are measuring the average squared values between the predicted and actual values.**\n",
+        "\n",
+        " **Whereas R2 score is a measure how well the model fits the data.**\n",
+        "\n",
+        "**In business context, a low RMSE and high R2 score would indicate that the model is making accurate predictions and is a good fit for the data. This would be desirable for a business because it would mean that the model is able to provide useful insights and make accurate predictions about future outcomes.**\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "BDKtOrBQpsJ3"
@@ -3612,7 +3752,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ML Model - 3"
+        "### ML Model - 3  Ridge Regression"
       ],
       "metadata": {
         "id": "Fze-IPXLpx6K"
@@ -3622,10 +3762,13 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 3 Implementation\n",
+        "ridge = Ridge()\n",
         "\n",
         "# Fit the Algorithm\n",
+        "ridge.fit(X_train, y_train)\n",
         "\n",
-        "# Predict on the model"
+        "# Predict on the model\n",
+        "y_pred_ridge1 = ridge.predict(X_test)"
       ],
       "metadata": {
         "id": "FFrSXAtrpx6M"
@@ -3645,13 +3788,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing evaluation Metric Score chart"
+        "# Visualizing evaluation Metric Score chart\n",
+        "result = evaluate_model(ridge, y_test,y_pred_ridge1)\n",
+        "score['Ridge'] = result\n",
+        ""
       ],
       "metadata": {
         "id": "xIY4lxxGpx6M"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score"
+      ],
+      "metadata": {
+        "id": "SskmrGWdLtha"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   **We have used Ridge regression technique to check the performance of the model and we have found that there is no significant difference in between linear regression and Ridge.**\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "cSQp8eHuLz9c"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3666,13 +3836,65 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 3 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
+        "# Import Ridge regressor Class\n",
+        "ridge = Ridge()\n",
+        "parameters = {'alpha': [1e-15,1e-10,1e-8,1e-5,1e-4,1e-3,1e-2,1,5,10,20,30,40,45,50,55,60,100]}\n",
+        "ridge_regressor = GridSearchCV(ridge, parameters, scoring='neg_mean_squared_error', cv=5)\n",
         "\n",
         "# Fit the Algorithm\n",
-        "\n",
-        "# Predict on the model"
+        "ridge_regressor.fit(X_train,y_train)\n",
+        "\n"
       ],
       "metadata": {
         "id": "eSVXuaSKpx6M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#getting optimum parameters\n",
+        "print(\"The best fit alpha value is found out to be :\" ,ridge_regressor.best_params_)\n",
+        "print(\"\\nUsing \",ridge_regressor.best_params_, \" the negative mean squared error is: \", ridge_regressor.best_score_)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "e4zWwkgwMXu7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initiate ridge with best alpha\n",
+        "ridge = Ridge(alpha = ridge_regressor.best_params_['alpha'])\n",
+        "\n",
+        "#prediction for Ridge regression\n",
+        "ridge.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict on the model\n",
+        "y_pred_ridge = ridge.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "nU-JtZVJMMP1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Evaluation matrices for Ridge regression\n",
+        "result = evaluate_model(ridge, y_test,y_pred_ridge)\n",
+        "\n",
+        "namer = 'Ridge with alpha = ' + str(ridge_regressor.best_params_['alpha'])\n",
+        "\n",
+        "score[namer] = result"
+      ],
+      "metadata": {
+        "id": "G2a110yVMo8E"
       },
       "execution_count": null,
       "outputs": []
@@ -3689,7 +3911,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **GridSearchCV is used to find the best hyperparameters for a machine learning model by searching over a specified parameter grid. It helps to ensure that a model is not overfitting or underfitting by evaluating the model's performance using cross-validation techniques. GridSearchCV can save time and resources compared to manually tuning the parameters of a model.**\n",
+        "\n",
+        " **To reduce time and effort we have used GridSearchCV.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "lQMffxkwpx6N"
@@ -3705,13 +3933,78 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "score"
+      ],
+      "metadata": {
+        "id": "QhRfksgZM-bl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "\n",
+        "\n",
+        "*   **We have tuned Ridge regression using hyperparametric technique & check the performance of the model and we have found that there is no significant difference in between tuned and without tuned.**\n",
+        "\n",
+        " **It performs well only when there is multicolinearity or overfitting situation is present in our case we have already handle the multicolinearity situation, thats why it is not showing any difference in performance.**\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "MzVzZC6opx6N"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **New Section**"
+      ],
+      "metadata": {
+        "id": "Xwe6LPA9O-UJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score.columns"
+      ],
+      "metadata": {
+        "id": "2mytFGLHOuoT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# R2 Scores plot\n",
+        "\n",
+        "models = list(score.columns)\n",
+        "train = score.iloc[-3,:]\n",
+        "test = score.iloc[-2,:]\n",
+        "\n",
+        "X_axis = np.arange(len(models))\n",
+        "\n",
+        "plt.figure(figsize=(25,10))\n",
+        "plt.bar(X_axis - 0.2, train, 0.4, label = 'Train R2 Score')\n",
+        "plt.bar(X_axis + 0.2, test, 0.4, label = 'Test R2 Score')\n",
+        "\n",
+        "\n",
+        "plt.xticks(X_axis,models, rotation=30)\n",
+        "plt.ylabel(\"R2 Score\")\n",
+        "plt.title(\"R2 score for each model\")\n",
+        "plt.legend()\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "8ZL1iOU-O05C"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
